src/design.css
* {
  color: inherit;
  background-color: inherit;
}

:root {
  color-scheme: light;
  --text-color: #2c2c2c;
  --background-color: #fafafa;
  --surface-color: #e7e7e7;
  --accent-color: #424242;
  --accent-text-color: #ffffff;
  --error-color: #fa8796;
}

:focus-visible {
  outline: none;
  box-shadow: 0 0 0 0.125rem var(--accent-color) inset;
  transition: box-shadow 100ms ease;
}

::placeholder {
  color: var(--text-color);
  opacity: 0.5;
}

::-webkit-scrollbar {
  width: 1rem;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  border-radius: 0.5rem;
  border: 0.25rem solid transparent;
  background-color: var(--surface-color);
  background-clip: content-box;
}

::-webkit-scrollbar-thumb:hover {
  background-color: var(--accent-color);
}

body {
  min-height: 100%;
  padding: 1rem;
  color: var(--text-color);
  background-color: var(--background-color);
  font:
    16px "Figtree",
    sans-serif;
  line-height: 1.5;
}

body.enable-transitions {
  --easing: cubic-bezier(0.32, 0, 0.67, 0);
}

h1 {
  font-size: 1.75rem;
  line-height: 1.2;
}

h2,
h3,
h4,
h5,
h6 {
  font-size: 1.5rem;
  line-height: 1.2;
}

button {
  height: 2.25em;
  padding: 0 0.75em;
  border: none;
  border-radius: 0.5rem;
  background-color: var(--surface-color);
  font: inherit;
  transition: 100ms var(--easing);
  cursor: pointer;
}

button.icon {
  width: 2.25em;
  height: 2.25em;
  padding: 0;
  border-radius: 50%;
}

button:disabled {
  opacity: 0.5;
  pointer-events: none;
}

button:has(i.bi) {
  font-family: unset;
  line-height: 1;
}

a.icon {
  font-size: 1.5em;
}

.pill {
  border-radius: 100vh;
}

i.bi {
  background-color: transparent;
}

input,
select {
  height: 2.25em;
  padding: 0 0.5em;
  border: none;
  border-radius: 0.5rem;
  background-color: var(--surface-color);
  width: 100%;
  cursor: pointer;
}

input:disabled,
select:disabled {
  opacity: 0.5;
  cursor: not-allowed;
  overflow: auto;
  pointer-events: auto;
}

input.disabled:disabled,
select.disabled:disabled {
  opacity: 0.25;
}

textarea {
  padding: 0.375em 0.5em;
  border: none;
  border-radius: 0.5rem;
  background-color: var(--surface-color);
  resize: none;
}

ul,
ol {
  margin: 0;
  padding: 0;
  padding-left: 2rem;
}

li {
  word-wrap: break-word;
}

kbd {
  height: 1.5em;
  padding: 0 0.25rem;
  border-radius: 0.25rem;
  background-color: var(--surface-color);
  font:
    14px "Figtree",
    sans-serif;
}

code {
  height: 1.5em;
  padding: 0 0.25rem;
  border-radius: 0.25rem;
  background-color: var(--surface-color);
}

button[data-theme] {
  height: 3rem;
  color: var(--text-color);
  background-color: var(--surface-color);
  text-transform: capitalize;
}

.attention {
  box-shadow: 0 0 0 0.125rem var(--error-color) inset;
  transition: box-shadow 100ms ease;
}

.virtual-clicker-logo {
  color: var(--logo-color);
}

#code-input {
  font-size: 2.5em;
  text-align: center;
  height: 1.5em;
  background-color: transparent;
}

@media (hover: hover) {
  button:hover {
    color: var(--accent-text-color);
    background-color: var(--accent-color);
  }

  label:hover + button {
    background-color: var(--surface-color);
  }

  button[data-theme]:hover {
    color: var(--accent-text-color);
    background-color: var(--accent-color);
  }
}

[data-gg-chat-anchor],
[data-gg-privacy-banner-anchor] {
  display: none !important;
}

#theme-preview,
#editor-preview {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  width: min(100%, 300px);
  margin: 1rem;
  align-self: center;
  padding: 1rem;
  border-radius: 1rem;
  background-color: var(--background-color);
  transition: 200ms var(--easing);
}

.text-placeholder {
  color: transparent;
  background-color: var(--text-color);
  width: fit-content;
  height: 0.8em;
  -webkit-user-select: none;
  user-select: none;
  border-radius: 0.25rem;
  transition: 200ms var(--easing);
}

.control-placeholder {
  height: 2.25em;
  padding: 0 0.5em;
  border: none;
  border-radius: 0.5rem;
  background-color: var(--surface-color);
  transition: 200ms var(--easing);
}

.control-placeholder.pill {
  border-radius: 100vh;
}

.hint {
  align-self: center;
  text-align: center;
  font-size: 0.8em;
  text-transform: uppercase;
  line-height: 1;
}

math-field {
  --caret-color: var(--text-color);
  --contains-highlight-background-color: var(--background-color);
  --text-font-family: "Figtree", sans-serif;

  padding: 0.375em 0.5em;
  border: none;
  border-radius: 0.5rem;
  background-color: var(--surface-color);
  font-size: 1.25em;
  cursor: text;
}

math-field:focus {
  outline: none;
  box-shadow: 0 0 0 0.125rem var(--accent-color) inset;
  transition: box-shadow 100ms ease;
}

math-field.attention {
  box-shadow: 0 0 0 0.125rem var(--error-color) inset;
  transition: box-shadow 100ms ease;
}

math-field::part(virtual-keyboard-toggle) {
  color: var(--text-color);
  background-color: var(--surface-color);
  transition:
    100ms color var(--easing),
    100ms background-color var(--easing);
}

math-field::part(virtual-keyboard-toggle):hover {
  color: var(--accent-text-color);
  background-color: var(--accent-color);
}

math-field::part(menu-toggle) {
  display: none;
}

math-field::part(content) {
  padding: 0;
}

div.ML__keyboard {
  background-color: transparent;
}

[data-button-select] {
  display: flex;
  gap: 0.25rem;
  padding: 0.25rem;
  background-color: var(--surface-color);
  border-radius: 0.5rem;
  width: fit-content;
}

[data-button-select] > button {
  height: unset;
  border-radius: 0.25rem;
  cursor: pointer;
}

[data-button-select] > button[aria-selected="true"] {
  color: var(--accent-text-color);
  background-color: var(--accent-color);
}

#answer-input {
  background-color: transparent;
}

#answer-input:focus {
  box-shadow: none;
}

#answer-textarea-container:has(#answer-input:focus) {
  outline: none;
  box-shadow: 0 0 0 0.125rem var(--accent-color) inset;
  transition: box-shadow 100ms ease;
}

#answer-input.attention {
  box-shadow: none;
}

#answer-textarea-container:has(#answer-input.attention) {
  outline: none;
  box-shadow: 0 0 0 0.125rem var(--error-color) inset;
  transition: box-shadow 100ms ease;
}

[square] {
  width: 2.25em !important;
  min-width: 36px;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

@media screen and (max-width: 900px) {
  .button-grid {
    flex-wrap: wrap !important;
  }

  label {
    width: unset !important;
  }

  .small,
  .smedium,
  .medium,
  square {
    max-width: unset !important;
  }
}

#clicker button {
  width: inherit;
  min-width: 36px;
}

[data-answer-mode="set"] input {
  text-align: center;
  width: -webkit-fill-available;
  min-width: 50px;
}

[data-answer-mode="frq"] h1 {
  text-align: center;
  margin: 10px 0;
}

#frq-input {
  color: var(--accent-color);
  -webkit-appearance: none;
  width: -webkit-fill-available;
  height: 20px;
  border-radius: 10px;
  background: var(--surface-color);
  outline: none;
}

#frq-input::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
}

#frq-input::-webkit-slider-thumb {
  width: 35px;
  height: 35px;
  border-radius: 50%;
  background: var(--accent-color);
  cursor: grab;
  transition: 0.25s;
}

#frq-input::-moz-range-thumb {
  width: 35px;
  height: 35px;
  border-radius: 50%;
  background: var(--accent-color);
  cursor: grab;
  transition: 0.25s;
}

#frq-input::-webkit-slider-thumb:active {
  width: 40px;
  height: 40px;
  cursor: grabbing;
  transition: 0.25s;
}

#clicker:has([data-value="frq"][aria-selected="true"]) #answer-container {
  overflow: visible !important;
}

.small {
  max-width: 75px;
}

.smedium {
  max-width: 125px;
}

.medium {
  max-width: 175px;
}

.fit {
  width: fit-content;
}

